# CPLibrary

./: .gitignore  API.md  ARCHITECTURE.md  CMakeLists.txt  CMakeSettings.json  README.md  abstract_algebra.h  analysis.h  b_tree.h  binary_operation.h  data_structures.h  fft.h  functional.h  linear_algebra.cpp  linear_algebra.h  main.cpp  ml.h  modular_arithmetic.cpp  modular_arithmetic.h  number_theory.cpp  number_theory.h  optimisation.h  order.h  parser_combined.cpp  polynomial.cpp  polynomial.h  readme.md  ring_extension.cpp  ring_extension.h  source_combiner.cpp  statistic_tree.cpp  statistic_tree.h  string.h  topology.h  zip.h
doc/: LINEAR_ALGEBRA.md  RANGE_QUERY_DATA_STRUCTURES.md  STATISTIC_TREES.md  index.md
doc/algebra/: abstract_algebra.md  binary_operation.md  index.md  order.md
doc/functional/: index.md  zip.md
doc/linear_algebra/: index.md  s_vector.md
doc/nt/: index.md  modular_arithmetic.md  number_theory.md
example/: HLD.cpp  HLD_combined.cpp  HLD_solution.cpp  PathQuery.cpp  PathQuery_combined.cpp  RangeQuery.cpp  expression.cpp  expression_combined.cpp  fft.py  fft_in.txt  grammar.cpp  in.txt  machine_learning.cpp  main_combined.cpp  minifier.cpp  nim.cpp  nim_combined.cpp  parser.cpp  power_series_composition.cpp  stack_game.cpp  stack_game2.cpp  test_input.txt
include/algebra/: abstract_algebra.h  abstract_algebra_test.h  binary_operation.h  bits.h  order.h  permutation.h  structures.h  types.h
include/arithmetic/: bigint.h  fast_arithmetic.h  operations.h  utils.h  varint.h
include/combinatorics/: binomial.h  egf.h  factorial.h  numbers.h  ogf.h  partitions.h  stirling.h
include/data_structures/: b_tree.h  data_structures.h  dynamic_range_queries.h  flat_structures.h  li_chao.h  range_queries.h  statistic_tree.h
include/data_structures/dynamic/: fenwick_tree.h  prefix_array.h  segment_tree.h  sparse_array.h
include/data_structures/fixed/: fenwick_tree.h  multi_dimensional.h  others.h  prefix_array.h  recursive.h  segment_tree.h  sparse_array.h
include/data_structures/statistic_tree/: key_statistics.h  order_statistics.h  stats_tree_base.h  value_stats.h
include/fields/: gf16.h  gf4.h  gf8.h  quadratic_extension.h  utils.h
include/formal_verification/: abstract_decision_tree.h  abstract_printer.h  decision_tree.h  dynamic_decision_tree.h  node.h
include/functional/: functional.h  zip.h
include/geometry/: point.h  shapes.h  transformation.h  triangles.h
include/graph/: 2sat.h  algorithms.h  divisibility.h  general.h  graph.h  union_find.h
include/graph/algorithms/: bellman_ford.h  bfs.h  dijkstra.h  floyd_warshall.h
include/graph/tree/: isomorphism.h  range_queries.h  tree.h
include/groups/: dihedral.h  product.h
include/linalg/: decomposition.h  hilbert_geometry.h  matrix.h  special_polynomials.h  vector.h  wrappers.h
include/linalg/views/: matrix.h  matrix_operations.h  vector.h
include/linear_algebra/: decomposition.h  hilbert_geometry.h  linear_algebra.h  matrix.h  special_matrices.h  special_polynomials.h  tensor.h  utils.h  vector.h  view.h  wrappers.h
include/linear_algebra/views/: flat_tensor.h  matrix.h  matrix_operations.h  operations.h  vector.h
include/ml/: ml.h
include/nt/: dirichelet.h  functions.h  modular_arithmetic.h  modular_functions.h  number_theory.h  primality.h  sieve.h
include/nt/modular/: dynamic.h  fixed.h  static.h
include/parser/: Grammar.h  LLParser.h  LRLogic.h  LRParser.h  LRParserBuilder.h  StatefulLRParser.h  StatefulParser.h
include/polynomial/: fast_general_polynomial_multiplication.h  fast_polynomial.h  fft.h  formal_series.h  polynomial.h  ring_extension.h  sparse_polynomial.h  special_polynomials.h
include/rings/: identities.h  tower.h
include/rings/quadratic/: dynamic.h  fixed.h  static.h
include/signals/: fft.h  hadamard.h  multi_fft.h  ntt.h
include/signals/quadratic/: ntt.h
include/string/: string.h
include/tensors/: indexing.h  tensor.h  utils.h  view.h
include/tensors/views/: flat_tensor.h  operations.h
include/topology/: analysis.h  optimisation.h  simplex.h  topology.h
src/arithmetic/: varint.cpp
src/formal_verification/: abstract_decision_tree.cpp  abstract_printer.cpp  dynamic_decision_tree.cpp  node.cpp
src/parser/: Grammar.cpp  LALRParserBuilder.cpp  LLParser.cpp  LR0ParserBuilder.cpp  LRLogic.cpp  LRParser.cpp  LRParserBuilder.cpp  SLRParserBuilder.cpp  StatefulParser.cpp
tests/: print.h
tests/algebra/: abstract_algebra.cpp  abstract_algebra_test.cpp  binary_operation.cpp
tests/data_structures/: fenwick_tree.cpp  segment_tree_test.cpp
tests/linear_algebra/: linear_algebra_approximate_test.cpp  linear_algebra_exact_test.cpp
tests/ml/: machine_learning_test.cpp
tests/number_theory/: modular_arithmetic_test.cpp  number_theory_test.cpp
tests/polynomial/: polynomial_test.cpp
tests/topology/: topology_test.cpp
